Novo livro na lista de pendentes / mudança no titulo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 	<link rel="canonical" href="">
 	<meta name="robots" content="index">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Lato" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/stylesheet.css">
+	<link rel="stylesheet" href="assets/css/stylesheet.min.css">
 </head>
 <body>
 	<header>
-			<h1>My books<br>for 2017</h1>
+		<h1>My books<br>for 2017</h1>
 	</header>
 	<article>
-
 		<!-- Lendo Agora -->
 		<section class="lendo">
 			<div class="wrap">
@@ -50,7 +49,7 @@
 			<div class="wrap">
 				<!-- Livros Adquiridos Title -->
 				<div class="livrosAdquiridos-title titleSection">
-					<h2>Adquiridos</h2>
+					<h2>Lidos</h2>
 				</div>
 				<!-- Livro -->
 				<!-- Livro: O poder do pensamento matematico -->
@@ -99,6 +98,15 @@
 					<h2>Pendentes</h2>
 				</div>
 				<!-- Livro -->
+				<!-- Livro: A arte da guerra -->
+				<div class="livro">
+					<!-- Livro Capa -->
+					<img class="livro-capa" src="assets/img/test8.jpg" alt="">
+					<!-- Livro titleBook -->
+					<div class="livro-title">
+						<h3>A Arte da Guerra </h3>
+					</div>
+				</div>
 				<!-- Livro: Sapiens uma breve história da humanidade -->
 				<div class="livro">
 					<!-- Livro Capa -->
@@ -135,7 +143,7 @@
 					<h2>Sobre Mim</h2>
 				</div>
 				<div class="aboutme-name">
-					<h3>Mauricio Mutte</h3>
+					<h3>Maurício Mutte</h3>
 				</div>
 				<div class="aboutme-sobre">
 					<p>Olá, meu nome é Maurício Mutte, sou estudante web por hobby, vivo atualmente em Porto Alegre. Ainda sou jovem mas estou constantemente à procura de novas (e melhores) maneiras de resolver problemas, geralmente usando a web como uma ferramenta para obter grandes resultados.</p>
