Imagens renomeadas / Livro novo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</div>
 				<div class="lendoAgora">
 					<!-- Lendo Agora Capa -->
-					<img class="lendoAgora-capa livro-capa" src="assets/img/test2.jpg" alt="">
+					<img class="lendoAgora-capa livro-capa" src="assets/img/O-poder-do-pensamento-matematico.jpg" alt="">
 					<div class="lendoAgora-text">
 						<!-- Lendo Agora titleBook -->
 						<h3 class="lendoAgora-titleBook">O poder do pensamento matemático</h3>
@@ -55,7 +55,7 @@
 				<!-- Livro: O poder do pensamento matematico -->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test2.jpg" alt="">
+					<img class="livro-capa" src="assets/img/O-poder-do-pensamento-matematico.jpg" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>O poder do pensamento matemático</h3>
@@ -64,7 +64,16 @@
 				<!-- Livro: Coletânea Front-End -->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test.jpg" alt="">
+					<img class="livro-capa" src="assets/img/SEO-Pratico.jpg" alt="">
+					<!-- Livro titleBook -->
+					<div class="livro-title">
+						<h3>SEO Prático</h3>
+					</div>
+				</div>
+				<!-- Livro: Coletânea Front-End -->
+				<div class="livro">
+					<!-- Livro Capa -->
+					<img class="livro-capa" src="assets/img/Coletanea-Front-End.jpg" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>Coletânea Front-End</h3>
@@ -73,7 +82,7 @@
 				<!-- Livro: Lógica de Programação-->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test4.jpg" alt="">
+					<img class="livro-capa" src="assets/img/Logica-de-programacao.jpg" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>Lógica de Programação</h3>
@@ -82,7 +91,7 @@
 				<!-- Livro: Harry Potter e a pedrea filosofal -->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test3.jpg" alt="">
+					<img class="livro-capa" src="assets/img/Harry-Potter-e-a-pedra-filosofal.jpg" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>Harry Potter e a Pedra Filosofal</h3>
@@ -95,13 +104,13 @@
 			<div class="wrap">
 				<!-- Livros Pendentes Title -->
 				<div class="livrosPendentes-title titleSection">
-					<h2>Pendentes</h2>
+					<h2>Para ler</h2>
 				</div>
 				<!-- Livro -->
 				<!-- Livro: A arte da guerra -->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test8.jpg" alt="">
+					<img class="livro-capa" src="assets/img/A-arte-da-guerra.jpg" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>A Arte da Guerra </h3>
@@ -110,7 +119,7 @@
 				<!-- Livro: Sapiens uma breve história da humanidade -->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test7.jpg" alt="">
+					<img class="livro-capa" src="assets/img/Sapiens-uma-breve-historia-da-humanidade.jpg" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>Sapiens - Uma breve história da humanidade </h3>
@@ -119,7 +128,7 @@
 				<!-- O poder do Habito-->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test6.png" alt="">
+					<img class="livro-capa" src="assets/img/O-poder-do-habito.png" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>O Poder do Hábito </h3>
@@ -128,7 +137,7 @@
 				<!-- Livro: Harry Potter e a Câmara Secreta -->
 				<div class="livro">
 					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/test5.jpg" alt="">
+					<img class="livro-capa" src="assets/img/Harry-Potter-e-a-camara-secreta.jpg" alt="">
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>Harry Potter e a Câmara Secreta</h3>
