A Arte da Guerra: Lido

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- Livros Adquiridos -->
+		<!-- LIDOS -->
 		<section class="livrosAdquiridos">
 			<div class="wrap">
 				<!-- Livros Adquiridos Title -->
@@ -59,6 +59,15 @@
 					<!-- Livro titleBook -->
 					<div class="livro-title">
 						<h3>O poder do pensamento matemático</h3>
+					</div>
+				</div>
+				<!-- Livro: A arte da guerra -->
+				<div class="livro">
+					<!-- Livro Capa -->
+					<img class="livro-capa" src="assets/img/A-arte-da-guerra.jpg" alt="">
+					<!-- Livro titleBook -->
+					<div class="livro-title">
+						<h3>A Arte da Guerra </h3>
 					</div>
 				</div>
 				<!-- Livro: Coletânea Front-End -->
@@ -99,7 +108,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- Livros Pendentes -->
+		<!-- PARA LER -->
 		<section class="livrosPendentes">
 			<div class="wrap">
 				<!-- Livros Pendentes Title -->
@@ -107,15 +116,7 @@
 					<h2>Para ler</h2>
 				</div>
 				<!-- Livro -->
-				<!-- Livro: A arte da guerra -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/A-arte-da-guerra.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>A Arte da Guerra </h3>
-					</div>
-				</div>
+				
 				<!-- Livro: Sapiens uma breve história da humanidade -->
 				<div class="livro">
 					<!-- Livro Capa -->
