--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
 					<h2>Para ler</h2>
 				</div>
 				<!-- Livro -->
-				
 				<!-- Livro: Sapiens uma breve história da humanidade -->
 				<div class="livro">
 					<!-- Livro Capa -->
@@ -156,7 +155,7 @@
 					<h3>Maurício Mutte</h3>
 				</div>
 				<div class="aboutme-sobre">
-					<p>Olá, meu nome é Maurício Mutte, sou estudante web por hobby, vivo atualmente em Porto Alegre. Ainda sou jovem mas estou constantemente à procura de novas (e melhores) maneiras de resolver problemas, geralmente usando a web como uma ferramenta para obter grandes resultados.</p>
+					<p>Olá, eu sou o Maurício Mutte, um estudante front-end por hobby que atualmente vive em Porto Alegre. Ainda sou muito jovem, porem, estou diariamente estudando novas tecnologias e constantemente à procura das melhores formas de resolver algum problema encontrado.</p>
 				</div>
 				<div class="aboutme-links">
 					<a href="http://mauriciomutte.com" class="aboutme--portfolio aboutme--social">Portfolio</a>
