upgrade in the design about me

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="canonical" href="https://mauriciomutte.github.io/My-books-for-2017/">
 	<meta name="robots" content="index">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Lato" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/stylesheet.min.css">
+	<link rel="stylesheet" href="assets/css/stylesheet.css">
 </head>
 <body>
 	<header>
@@ -155,7 +155,7 @@
 					<h3>Maurício Mutte</h3>
 				</div>
 				<div class="aboutme-sobre">
-					<p>Olá, eu sou o Maurício Mutte, um estudante front-end por hobby que atualmente vive em Porto Alegre. Ainda sou muito jovem, porem, estou diariamente estudando novas tecnologias e constantemente à procura das melhores formas de resolver algum problema encontrado.</p>
+					<p class="aboutme-p">Olá, eu sou o Maurício Mutte, um estudante front-end por hobby que atualmente vive em Porto Alegre. Ainda sou muito jovem, porem, estou diariamente estudando novas tecnologias e constantemente à procura das melhores formas de resolver algum problema encontrado.</p>
 				</div>
 				<div class="aboutme-links">
 					<a href="http://mauriciomutte.com" class="aboutme--portfolio aboutme--social">Portfolio</a>
