Add book for read

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
 					<h2>Para ler</h2>
 				</div>
 				<!-- Livro -->
+				<!-- Livro: Eloquent Javascript -->
+				<div class="livro">
+					<!-- Livro Capa -->
+					<img class="livro-capa" src="assets/img/Eloquent-javascript.png" alt="">
+					<!-- Livro titleBook -->
+					<div class="livro-title">
+						<h3>Eloquent Javascript </h3>
+					</div>
+				</div>
 				<!-- Livro: Sapiens uma breve história da humanidade -->
 				<div class="livro">
 					<!-- Livro Capa -->
