Add JS and JSON

--- a/index.html
+++ b/index.html
@@ -47,110 +47,25 @@
 		<!-- LIDOS -->
 		<section class="livrosAdquiridos">
 			<div class="wrap">
-				<!-- Livros Adquiridos Title -->
+				<!-- Livros Lidos Title -->
 				<div class="livrosAdquiridos-title titleSection">
 					<h2>Lidos</h2>
 				</div>
-				<!-- Livro -->
-				<!-- Livro: O poder do pensamento matematico -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/O-poder-do-pensamento-matematico.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>O poder do pensamento matemático</h3>
-					</div>
-				</div>
-				<!-- Livro: A arte da guerra -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/A-arte-da-guerra.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>A Arte da Guerra </h3>
-					</div>
-				</div>
-				<!-- Livro: Coletânea Front-End -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/SEO-Pratico.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>SEO Prático</h3>
-					</div>
-				</div>
-				<!-- Livro: Coletânea Front-End -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/Coletanea-Front-End.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>Coletânea Front-End</h3>
-					</div>
-				</div>
-				<!-- Livro: Lógica de Programação-->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/Logica-de-programacao.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>Lógica de Programação</h3>
-					</div>
-				</div>
-				<!-- Livro: Harry Potter e a pedrea filosofal -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/Harry-Potter-e-a-pedra-filosofal.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>Harry Potter e a Pedra Filosofal</h3>
-					</div>
+				<!-- Livros Lidos -->
+				<div id="lidos">
 				</div>
 			</div>
 		</section>
 		<!-- PARA LER -->
 		<section class="livrosPendentes">
 			<div class="wrap">
-				<!-- Livros Pendentes Title -->
+				<!-- Livros Para Ler Title -->
 				<div class="livrosPendentes-title titleSection">
 					<h2>Para ler</h2>
 				</div>
-				<!-- Livro -->
-				<!-- Livro: Eloquent Javascript -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/Eloquent-javascript.png" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>Eloquent Javascript </h3>
-					</div>
-				</div>
-				<!-- Livro: Sapiens uma breve história da humanidade -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/Sapiens-uma-breve-historia-da-humanidade.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>Sapiens - Uma breve história da humanidade </h3>
-					</div>
-				</div>
-				<!-- O poder do Habito-->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/O-poder-do-habito.png" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>O Poder do Hábito </h3>
-					</div>
-				</div>
-				<!-- Livro: Harry Potter e a Câmara Secreta -->
-				<div class="livro">
-					<!-- Livro Capa -->
-					<img class="livro-capa" src="assets/img/Harry-Potter-e-a-camara-secreta.jpg" alt="">
-					<!-- Livro titleBook -->
-					<div class="livro-title">
-						<h3>Harry Potter e a Câmara Secreta</h3>
-					</div>
+				<!-- Livros Para Ler -->
+				<div id="paraLer">
+					
 				</div>
 			</div>
 		</section>
@@ -175,4 +90,5 @@
 		</section>
 	</article>
 </body>
+<script src="assets/js/main.js"></script>
 </html>
