Add lendoAgora JSON

--- a/index.html
+++ b/index.html
@@ -23,24 +23,8 @@
 				<div class="livrosAgora-title titleSection">
 					<h2>Lendo no momento</h2>
 				</div>
-				<div class="lendoAgora">
-					<!-- Lendo Agora Capa -->
-					<img class="lendoAgora-capa livro-capa" src="assets/img/O-poder-do-pensamento-matematico.jpg" alt="">
-					<div class="lendoAgora-text">
-						<!-- Lendo Agora titleBook -->
-						<h3 class="lendoAgora-titleBook">O poder do pensamento matemático</h3>
-						<!-- Lendo Agora Description -->
-						<p class="lendoAgora-description">Para muitos, a matemática que aprendemos na escola parece uma série de regras estabelecidas pelos antigos e que não podem
-						ser questionadas. Neste livro, o matemático
-						Jordan Ellenberg nos mostra como essa visão
-						é enganadora. A matemática não se limita
-						a incidentes abstratos. Ela está em tudo que
-						tocamos e vivemos, e se relaciona a questões
-						do nosso cotidiano.</p>
-						<!-- Lendo Agora Info -->
-						<div class="lendoAgora-info">
-						</div>
-					</div>
+				<div class="lendoAgora" id="lendoAgora">
+					
 				</div>
 			</div>
 		</section>
