Add books menu and minify one image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 		<h1>My books<br>for 2017</h1>
 	</header>
 	<article>
+		<!-- MENU -->
+		<section class="livrosMenu">
+				<div class="wrap">
+					<div class="livrosMenu--content">
+						<a class="livrosMenu--btn" href="#livrosAdquiridos">Lidos</a>
+						<a class="livrosMenu--btn" href="#livrosPendentes">Para ler</a>
+					</div>
+				</div>
+			</section>
 		<!-- Lendo Agora -->
 		<section class="lendo">
 			<div class="wrap">
@@ -28,8 +37,9 @@
 				</div>
 			</div>
 		</section>
+		
 		<!-- LIDOS -->
-		<section class="livrosAdquiridos">
+		<section class="livrosAdquiridos" id="livrosAdquiridos">
 			<div class="wrap">
 				<!-- Livros Lidos Title -->
 				<div class="livrosAdquiridos-title titleSection">
@@ -41,7 +51,7 @@
 			</div>
 		</section>
 		<!-- PARA LER -->
-		<section class="livrosPendentes">
+		<section class="livrosPendentes" id="livrosPendentes">
 			<div class="wrap">
 				<!-- Livros Para Ler Title -->
 				<div class="livrosPendentes-title titleSection">
