--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 				<div class="aboutme-title titleSection">
 					<h2>Sobre Mim</h2>
 				</div>
+				<div class="aboutme-img">
+					<img src="assets/img/My-picture.jpg" alt="Foto do Maurício">
+				</div>
 				<div class="aboutme-name">
 					<h3>Maurício Mutte</h3>
 				</div>
