--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="canonical" href="https://mauriciomutte.github.io/My-books-for-2017/">
 	<meta name="robots" content="index">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Lato" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
 	<header>
