--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>My books for 2017</title>
+	<title>My books</title>
 	<meta name="description" content="Esse ano quero ler ainda mais livros do que ano passado, por isso, criei esse site para compartilhar e gerenciar os livros que estou lendo, já li ou quero ler. ">
 	<link rel="canonical" href="https://mauriciomutte.github.io/My-books-for-2017/">
 	<meta name="robots" content="index">
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header>
-		<h1>My books<br>for 2017</h1>
+		<h1>My books</h1>
 	</header>
 	<article>
 		<!-- MENU -->
@@ -46,8 +46,10 @@
 					<h2>Lidos</h2>
 				</div>
 				<!-- Livros Lidos -->
-				<div id="lidos">
-				</div>
+				<h3 class="livrosAdquiridos-year">2018</h3>
+				<div id="2018"></div>
+				<h3 class="livrosAdquiridos-year">2017</h3>
+				<div id="2017"></div>
 			</div>
 		</section>
 		<!-- PARA LER -->
