--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 					<h2>Lidos</h2>
 				</div>
 				<!-- Livros Lidos -->
+				<h3 class="livrosAdquiridos-year">2019</h3>
+				<div id="2019"></div>
 				<h3 class="livrosAdquiridos-year">2018</h3>
 				<div id="2018"></div>
 				<h3 class="livrosAdquiridos-year">2017</h3>
